Fix word breaking on inline code blocks on mobile
Open the page on an iPhone after the responsive changes from
d908ac399ac5aa106ec5a994669eb5d6b17f16fa.

It will have a weird right margin caused by the overflowing of an
inlined code block. This commit makes it be proper.

--- a/css/default.css
+++ b/css/default.css
@@ -108,6 +108,9 @@ pre.sourceCode {
 }
 
 p > code, li > code {
+    display: inline-block;
+    word-wrap: break-word;
+    max-width: 100%;
     background-color: #FFFCF6;
     padding: 2px;
     border: 1px solid grey;
